--- a/css/styles.css
+++ b/css/styles.css
@@ -1,5 +1,5 @@
 body {
-        font-family: 'Trebuchet MS', sans-serif;
+        font-family: 'Helvetica', sans-serif;
         margin: 0;
         padding: 0;
         background-color: #f4f4f4;
@@ -11,6 +11,17 @@ header {
     padding: 1em;
 }
 
+#title-header {
+  color: #fff;
+}
+
+#about-me-home {
+
+}
+
+#projects-home {
+
+}
 section {
     max-width: 800px;
     margin: 2em auto;
