--- a/css/styles.css
+++ b/css/styles.css
@@ -1,69 +1,103 @@
 body {
-        font-family: 'Helvetica', sans-serif;
-        margin: 0;
-        padding: 0;
-        background-color: #f4f4f4;
+  font-family: 'Helvetica', sans-serif;
+  margin: 0;
+  padding: 0;
 }
+#homepage-body {
+  background-color: #f4f4f4;
+}
+#notes-body {
+  background-color: #f4f4f4;
+}
+#about-body {
+  background-color: #f4f4f4;
+}
+#network-notes-body {
+  background-color: #f4f4f4;
+}
+
+#projects-body {
+  background-color: #f4f4f4;
+}
+#inf-notes-body {
+  background-color: #f4f4f4;
+}
+
+.project-description {
+  margin-top: 5px;
+  padding-left: 20px;
+  font-size: 12px;
+}
+
+
 header {
-    background-color: #333;
-    color: #fff;
-    text-align: center;
-    padding: 1em;
+  background-color: #333;
+  color: #fff;
+  text-align: center;
+  padding: 1em;
 }
 
 #title-header {
   color: #fff;
 }
 
-#about-me-home {
-
+#inf-notes-s1 {
+  text-align: left;
 }
 
-#projects-home {
-
-}
 section {
-    max-width: 800px;
-    margin: 2em auto;
-    padding: 2em;
-    background-color: #fff;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+  max-width: 800px;
+  margin: 2em auto;
+  padding: 2em;
+  background-color: #fff;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
 }
-
+#inf-notes-s1{
+  max-width: 800px;
+  margin: 2em auto;
+  padding: 2em;
+  background-color: #fff;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+}
 h1 {
-        color: white;
+  color: white;
 }
 
 h2 {
-    color: black;
+  color: black;
 }
 
 p {
-    line-height: 1.6;
-    color: black;
+  line-height: 1.6;
+  color: black;
 }
 
 ul {
-    list-style: none;
-    padding: 0;
+  list-style: none;
+  padding: 0;
 }
 
 li {
-    margin-bottom: 0.5em;
+  margin-bottom: 0.5em;
 }
 
 a {
-    color: #3498db;
-    text-decoration: none;
+  color: #3498db;
+  text-decoration: none;
 }
 
 a:hover {
-    text-decoration: underline;
+  text-decoration: underline;
 }
 
 footer {
-    text-align: center;
-    padding: 1em;
-    background-color: #333;
-    color: #fff;
+  text-align: center;
+  padding: 1em;
+  background-color: #333;
+  color: #fff;
+}
+
+.back-link {
+  display: block;
+  margin-bottom: 10px
 }
