--- a/css/styles.css
+++ b/css/styles.css
@@ -2,25 +2,7 @@ body {
   font-family: 'Helvetica', sans-serif;
   margin: 0;
   padding: 0;
-}
-#homepage-body {
-  background-color: #f4f4f4;
-}
-#notes-body {
-  background-color: #f4f4f4;
-}
-#about-body {
-  background-color: #f4f4f4;
-}
-#network-notes-body {
-  background-color: #f4f4f4;
-}
-
-#projects-body {
-  background-color: #f4f4f4;
-}
-#inf-notes-body {
-  background-color: #f4f4f4;
+  background-color: #333131;
 }
 
 .project-description {
@@ -45,18 +27,21 @@ header {
   text-align: left;
 }
 
+ul {
+  color: black;
+}
 section {
   max-width: 800px;
   margin: 2em auto;
   padding: 2em;
-  background-color: #fff;
+  background-color: #3f3f3f;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
 }
 #inf-notes-s1{
   max-width: 800px;
   margin: 2em auto;
   padding: 2em;
-  background-color: #fff;
+  background-color: #3f3f3f;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
 }
 h1 {
