--- a/css/styles.css
+++ b/css/styles.css
@@ -4,7 +4,6 @@ body {
   padding: 0;
   background-color: #333131;
 }
-
 .project-description {
   margin-top: 5px;
   padding-left: 20px;
@@ -19,17 +18,11 @@ header {
   padding: 1em;
 }
 
-#title-header {
-  color: #fff;
-}
+#title-header { color: #fff; }
 
-#inf-notes-s1 {
-  text-align: left;
-}
+#inf-notes-s1 { text-align: left; }
 
-ul {
-  color: black;
-}
+ul { color: black; }
 section {
   max-width: 800px;
   margin: 2em auto;
@@ -44,13 +37,9 @@ section {
   background-color: #3f3f3f;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
 }
-h1 {
-  color: white;
-}
+h1 { color: white; }
 
-h2 {
-  color: black;
-}
+h2 { color: black; }
 
 p {
   line-height: 1.6;
@@ -62,18 +51,14 @@ ul {
   padding: 0;
 }
 
-li {
-  margin-bottom: 0.5em;
-}
+li { margin-bottom: 0.5em; }
 
 a {
   color: #3498db;
   text-decoration: none;
 }
 
-a:hover {
-  text-decoration: underline;
-}
+a:hover { text-decoration: underline; }
 
 footer {
   text-align: center;
